<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Calendar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="25dp">

        <EditText
            android:id="@+id/goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="308dp"
            android:layout_marginLeft="308dp"
            android:layout_marginTop="208dp"
            android:hint="@string/_94"
            android:inputType="number"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" tools:targetApi="o" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="208dp"
            android:text="@string/percent"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/goal"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="308dp"
            android:layout_marginLeft="308dp"
            android:layout_marginTop="19dp"
            android:hint="@string/_10"
            android:inputType="number"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goal"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="19dp"
            android:text="@string/percent"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/weight"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/FinalGradeCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/final_grade_calculator"
        android:textSize="30sp"
        app:fontFamily="@font/comfortaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="326dp"
        android:layout_height="67dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:text="@string/this_tool_will_help_you_figure_out_what_grade_percentage_you_need_to_get_on_your_exam"
        android:textSize="18sp"
        app:fontFamily="@font/comfortaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FinalGradeCalculator" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="37dp"
        android:text="@string/your_current_grade_is"
        android:textSize="18sp"
        app:fontFamily="@font/comfortaa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="18dp"
        android:text="@string/you_want_at_least_a"
        android:textSize="18sp"
        app:fontFamily="@font/comfortaa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="17dp"
        android:text="@string/your_final_is_worth"
        android:textSize="18sp"
        app:fontFamily="@font/comfortaa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="37dp"
        android:text="@string/percent"
        android:textSize="18sp"
        app:fontFamily="@font/comfortaa"
        app:layout_constraintStart_toEndOf="@+id/current"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/calculate_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:background="#EBE4A9"
        android:text="@string/calculate_what_i_need"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/response"
        android:layout_width="268dp"
        android:layout_height="128dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/you_need"
        android:textSize="18sp"
        app:fontFamily="@font/comfortaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_it" />

    <EditText
        android:id="@+id/current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="37dp"
        android:hint="@string/_97"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>