<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:text="@string/welcome_back"
        android:textSize="18sp"
        app:fontFamily="@font/comfortaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:text="@string/productive"
        android:textSize="30sp"
        app:fontFamily="@font/comfortaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:background="#EE9797"
        android:text="@string/go_to_calendar"
        android:textColorHighlight="#00A84242"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/scanSyllabus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginLeft="151dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="151dp"
        android:layout_marginRight="151dp"
        android:background="#EBE4A9"
        android:text="@string/scan_syllabus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calendar" />

    <Button
        android:id="@+id/gradeCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:background="#87C7DA"
        android:text="@string/go_to_grade_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanSyllabus"
        android:onClick="goToCalculator"/>
</androidx.constraintlayout.widget.ConstraintLayout>