<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendar">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/date"
        android:layout_width="345dp"
        android:layout_height="38dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:background="#E2E0E2"
        android:gravity="center"
        android:text="@string/sunday_april_26_2020"
        android:textSize="18sp"
        app:fontFamily="@font/comfortaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/typeInEvent"
        android:layout_width="246dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="18dp"
        android:hint="@string/type_in_an_event_you_want_to_add"
        android:textSize="14sp"
        app:fontFamily="@font/comfortaa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        android:autofillHints=""
        android:importantForAutofill="no"
        android:inputType="text" tools:targetApi="o" />

    <Button
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="#EBE4A9"
        android:text="@string/add_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        android:onClick="saveFunction"/>

    <CheckedTextView
        android:id="@+id/checkedTextView2"
        android:layout_width="345dp"
        android:layout_height="169dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/checkedtextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeInEvent" />

</androidx.constraintlayout.widget.ConstraintLayout>